--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="logo.png" class="logo" />
+          <h2 class="logo">Portfolio</h2>
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -23,11 +23,14 @@
           <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-          <p>UI/UX Designer</p>
+          <p>Web Developer</p>
           <h1>
-            Hi,I'M <span>kevin</span><br />
-            Jen From Australia
+            Hi,I'M <span>Nasim</span><br />
+            Ansari From Ranchi,<br>Jharkhand
           </h1>
+        </div>
+        <div class="mainimg">
+          <img src="portimg4.jpg" alt="">
         </div>
       </div>
     </div>
@@ -36,19 +39,16 @@
       <div class="container">
         <div class="row">
           <div class="about-col-1">
-            <img src="user.png" />
+            <img src="portimg7.jpg" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About me</h1>
             <p>
-              Numquam harum sint quia assumenda ad excepturi, ullam magnam quod
-              minima ipsum nisi praesentium fugiat ab rem dicta. recusandae?
-              Debitis ab quidem repudiandae possimus qui aliquid exercitationem
-              eveniet numquam incidunt sunt aperiam vero nemo labore enim,
-              doloremque rem, in beatae sed deserunt! Aut quis fuga eum nisi
-              sunt voluptas accusamus voluptatem animi ratione. Hic eos ad earum
-              consequuntur, iusto nam? Praesentium architecto earum ex! Facilis
-              ipsa perferendis ut fugiat atque praesentium, provident!
+              Full-stack web developer skilled in HTML, CSS, JavaScript,
+               React, Node.js, and MongoDB. Passionate about
+              crafting seamless user experiences and delivering innovative web solutions. <br> <br> Eager to leverage academic training and hands-on 
+              projects to contribute innovative solutions in collaborative team environment.Quick learner with a keen eye for details and a commitment to saying current with emerging techonologies in the dynamic field of web Developmenet.
+
             </p>
             <div class="tab-title">
               <p class="tab-links active-link" onclick="opentab('skills')">
@@ -62,39 +62,41 @@
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li>
-                  <span>UI/UX</span><br />
-                  Designing Web/App interfaces
+                  <span>Languages</span><br />
+                  C++, Java, JavaScript, SQL
                 </li>
-                <li><span>Web Developmenet</span><br />Web app Developmenet</li>
+                <li><span>Techonologies/Frameworks</span><br />HTML5, CSS3, MongoDB, Express, React, NodeJS, Bootstrap</li>
                 <li>
-                  <span>App Developmenet</span><br />Building Android/iOS apps
+                  <span>Developer Tool</span><br /> VS code
                 </li>
               </ul>
             </div>
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
-                  <span>2021-Current</span><br />
-                  UI/UX Design Training at ET Institute
-                </li>
-                <li><span>2019-2021</span><br />Team lead a StarApp</li>
-                <li>
-                  <span>2017-2019</span><br />UI/UX Design Execuive at Coin
-                  Digital Ltd.
-                </li>
-                <li>
-                  <span>2016-2017</span><br />Intership at ekart eCommerce.
+                  <span>2024</span><br />
+                  Fresher <br>
+                  Dr.Shyama Prashad Mukherjee University,Ranchi.
                 </li>
               </ul>
             </div>
             <div class="tab-contents" id="education">
               <ul>
                 <li>
-                  <span>2016</span><br />
-                  UI/UX Design Training at ET Institute
+                  <span>2022-2024</span><br />
+                 Master of computer application (MCA) - Current Percentage - <span>80</span> <br>
+                From    Dr.Shyama Prashad Mukherjee University,Ranchi.
                 </li>
-                <li><span>2016</span><br />MBA from MIT Bangalore</li>
-                <li><span>2014</span><br />BBA from ISM Bangalore.</li>
+                <li>
+                  <span>2017-2020</span><br />
+                 Bachelor of computer application (BCA) - Final Percentage - <span>75</span> <br>
+                From    Marwari College Ranchi.
+                </li>
+                <li>
+                  <span>2015-2017</span><br />
+                 Intermediate In Science (I.sc) - Final Percentage - <span>60</span> <br>
+                From    Marwari College Ranchi.
+                </li>
               </ul>
             </div>
           </div>
@@ -108,26 +110,20 @@
         <div class="services-list">
           <div>
             <i class="fa-solid fa-code"></i>
-            <h2>Web Design</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Quo voluptatibus in nisi eaque temporibus tenetur iusto fugiat id ratione maxime impedit nihil ipsa, 
-              ipsum voluptate hic, culpa sed eius harum!</p>
+            <h2>Web Developmenet</h2>
+            <p>I specialize in crafting visually stunning websites using a blend of frontend and backend techonologies.I created dynamic and interactive user interfaces using modern framework like React.js ! </p>
               <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-solid fa-crop-simple"></i>
             <h2>UI/UX Design</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Quo voluptatibus in nisi eaque temporibus tenetur iusto fugiat id ratione maxime impedit nihil ipsa, 
-              ipsum voluptate hic, culpa sed eius harum!</p>
+            <p>Building dynamic and interactive user interfaces with modern frontend frameworks like React.js and Vue.js. I specialize in translating design mockups into responsive, pixel-perfect web experiences !</p>
               <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-brands fa-app-store-ios"></i>
-            <h2>App Design</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Quo voluptatibus in nisi eaque temporibus tenetur iusto fugiat id ratione maxime impedit nihil ipsa, 
-              ipsum voluptate hic, culpa sed eius harum!</p>
+            <h2>Software development</h2>
+            <p>I specialize in crafting robust and scalable software solutions customized to meet your specific requirements. Leveraging my expertise in diverse programming languages and frameworks, I design and develop efficient software applications that streamline operations and propel business growth !</p>
               <a href="#">Learn more</a>
           </div>
         </div>
@@ -136,29 +132,30 @@
     <!-- portfolio -->
     <div id="portfolio">
       <div class="container">
-        <h1 class="sub-title">My Work</h1>
+        <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
           <div class="work">
             <img src="work-1.png" alt="">
             <div class="layer">
-              <h3>Social Media App</h3>
-              <p>The app connect you to the talent people around the world and the universe.Download it from play store talent people around the world and the universe</p>
+              <h3>Institute Management System</h3>
+              <p>Maintain accurate records of students, including personal details and any relevant information.</p>
               <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
           </div>
           <div class="work">
             <img src="work-2.png" alt="">
             <div class="layer">
-              <h3>Social Media App</h3>
-              <p>The app connect you to the talent people around the world.Download connect you to the talent people around the world and the universe.Download it it from play store</p>
+              <h3>E-Commerce Websites</h3>
+              <p>Create a user-friendly interface to enhance the overall shopping experience.</p>
               <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
           </div>
           <div class="work">
             <img src="work-3.png" alt="">
             <div class="layer">
-              <h3>Social Media App</h3>
-              <p>The app connect you to the talent people around the worldconnect you to the talent people around the world and the universe.Download it .Download it from play store</p>
+              <h3>iCoder Programming Quiz</h3>
+              <p> Develop the website in which programming problems are there, with easy , medium, and hard level.
+              </p>
               <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
           </div>
@@ -172,15 +169,15 @@
     <div class="row">
       <div class="contact-left">
         <h1 class="sub-title">Contact me</h1>
-        <p><i class="fa-solid fa-paper-plane"></i>Contact@example.com</p>
-        <p><i class="fa-solid fa-square-phone"></i>0123456789</p>
+        <p><i class="fa-solid fa-paper-plane"></i>nasimkhan8227@gmail.com</p>
+        <p><i class="fa-solid fa-square-phone"></i>8227902276</p>
         <div class="social-icon">
-          <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.facebook.com/nasim.ansari.52459615/"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://twetter.com/"><i class="fa-brands fa-twitter"></i></a>
-          <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="https://www.instagram.com/nasimazlan/?hl=en"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/nasim-ansari-586775242/"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
-        <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
+        <a href="NasimCv (4).pdf" download class="btn btn2">Download CV</a>
       </div>
       <div class="contact-right">
         <form name="submit-to-google-sheet">
@@ -194,7 +191,7 @@
     </div>
   </div>
   <div class="copyright">
-    <p>Copyright &#169 kevin . made with by <i class="fa-solid fa-heart"></i> Easy Tutorials</p>
+    <p>Copyright &#169 2024 <i class="fa-solid fa-heart"></i> Nasim Azlan</p>
   </div>
 </div>
 
